--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,39 @@ body{
     font-family: "Roboto", sans-serif;
     display: flex;
     flex-direction: column;
+    flex:1;
+    margin:0;
+}
+
+.header{
+    background-color: #1f2937;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 50px 100px;
+    gap: 10px;
+}
+
+.content{
+    display: flex;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: #1f2937;
+    color: #F9FAF8;
+}
+
+.illustration{
+    display: flex;
 }
 
 .header img{
-    width: 300px;
+    width: 500px;
     height: auto;
+    margin-left: 30px;
 }
 
 .information img{
@@ -14,14 +42,11 @@ body{
     height: auto;
 }
 
-.header{
-    background-color: #1f2937;
-}
-
 .main-text{
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+    margin: 0;
 }
 
 .secondary-text{
@@ -36,6 +61,10 @@ body{
 
 button{
     background-color: #3882F6;
+    border-radius: 2px;
+    border: 2px solid #3882F6;
+    padding: 3px 15px;
+    color: #F9FAF8;
 }
 
 .information .text{
@@ -53,4 +82,21 @@ button{
     font-style: italic;
     font-weight: 300;
     color:#1F2937;
+}
+
+.top{
+    display: flex;
+    margin-bottom: 100px;
+    justify-content: space-between;
+}
+
+ul{
+    list-style: none;
+    display: flex;
+    gap: 30px;
+}
+
+a{
+    text-decoration: none;
+    color: grey;
 }
