--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,14 @@ body{
     padding: 10px;
     background-color: #1f2937;
     color: #F9FAF8;
+    padding: 30px;
 }
 
 .illustration{
     display: flex;
+    padding: 10px 100px 100px;
+    justify-content: center;
+    gap: 52px;
 }
 
 .header img{
@@ -38,8 +42,10 @@ body{
 }
 
 .information img{
-    width: 100px;
-    height: auto;
+    width: 190px;
+    height: 190px;
+    border-radius: 10px;
+    border: 5px solid #3882F6;
 }
 
 .main-text{
@@ -75,6 +81,9 @@ button{
 
 .quote{
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 100px 100px;
 }
 
 .speech{
@@ -82,6 +91,12 @@ button{
     font-style: italic;
     font-weight: 300;
     color:#1F2937;
+    display: flex;
+    margin-top: 100px;
+    margin-left: 20px;
+    margin-right: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .top{
@@ -99,4 +114,61 @@ ul{
 a{
     text-decoration: none;
     color: grey;
+}
+
+.information .text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 60px 40px;
+}
+
+.info{
+    max-width: 200px;
+}
+
+.author{
+    display: flex;
+    justify-content: flex-end;
+    max-width: 900px;
+    font-weight: 700;
+}
+
+.sign-up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 100px;
+}
+
+.sign-up-box{
+    display: flex;
+    background-color: #3882F6;
+    padding: 20px 100px;
+    color: #F9FAF8;
+    border-radius: 10px;
+    width: 800px;
+    justify-content: space-between;
+}
+
+.sign-up-box .button{
+    display: flex;
+    background-color: #3882F6;
+    border: 2px solid white;
+    border-radius: 2px;
+    margin: 40px;
+    padding: 2px 6px;
+}
+
+.bottom-header{
+    margin-top: 0;
+}
+
+.top-header{
+    margin-bottom: 0;
+}
+
+.top-header{
+    font-weight: 700;
+    font-size: 20px;
 }
