--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ button{
 .speech{
     font-size: 36px;
     font-style: italic;
-    font-weight: 300;
     color:#1F2937;
     display: flex;
     margin-top: 100px;
@@ -97,6 +96,7 @@ button{
     margin-right: 20px;
     justify-content: center;
     align-items: center;
+    font-weight: 300;
 }
 
 .top{
@@ -132,6 +132,7 @@ a{
     justify-content: flex-end;
     max-width: 900px;
     font-weight: 700;
+    font-size: 20px;
 }
 
 .sign-up{
@@ -155,20 +156,18 @@ a{
     display: flex;
     background-color: #3882F6;
     border: 2px solid white;
-    border-radius: 2px;
+    border-radius: 8px;
     margin: 40px;
     padding: 2px 6px;
 }
 
 .bottom-header{
     margin-top: 0;
-}
-
-.top-header{
-    margin-bottom: 0;
+    color: rgb(212, 212, 212);
 }
 
 .top-header{
     font-weight: 700;
     font-size: 20px;
+    margin-bottom: 0;
 }
